--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 *.lcov
+tests/coverage
+/tests/coverage_report
 
 # nyc test coverage
 .nyc_output
@@ -102,7 +104,7 @@ dist
 
 # TernJS port file
 .tern-port
-v
+
 # Project specific
 .DS_Store
 node_modules
@@ -112,13 +114,8 @@ node_modules
 **/.parcel-cache/*
 /taqueria
 /taq
-tests/coverage
-/taqueria-protocol/out
-/taqueria-protocol/out
-/taqueria-protocol/*.mjs
-/taqueria-protocol/*.map
-/taqueria-protocol/*.d.ts
-/taqueria-protocol/*.js
+
+# SDK
 /taqueria-sdk/index.js
 /taqueria-sdk/index.js.map
 /taqueria-sdk/types.js
@@ -130,19 +127,30 @@ tests/coverage
 /taqueria-sdk/*.mjs
 /taqueria-sdk/*.mjs.map
 /taqueria-sdk/*.d.ts
+
+# Core plugin
 /taqueria-plugin-core/index.js
 /taqueria-plugin-core/index.js.map
-/taqueria-plugin-smartpy/index.js
-/taqueria-plugin-smartpy/index.js.map
+
+# LIGO Plugin
 /taqueria-plugin-ligo/index.js
 /taqueria-plugin-ligo/index.js.map
-/tests/coverage_report
+
+# SmartPY
 /taqueria-plugin-smartpy/.parcel-cache
+/taqueria-plugin-smartpy/index.js
+/taqueria-plugin-smartpy/index.js.map
+
+# Taquito Plugin
 /taqueria-plugin-taquito/index.js
 /taqueria-plugin-taquito/index.js.map
+/taqueria-plugin-taquito/.parcel-cache
+
+# Mock plugin
 /taqueria-plugin-mock/index.js
 /taqueria-plugin-mock/index.js.map
-/taqueria-plugin-taquito/.parcel-cache
+
+# Flextesa plugin
 /taqueria-plugin-flextesa/index.js
 /taqueria-plugin-flextesa/index.js.map
 /taqueria-plugin-flextesa/.parcel-cache
@@ -150,9 +158,13 @@ tests/coverage
 /taqueria-flextesa-manager/*.js
 /taqueria-flextesa-manager/*.d.ts
 /taqueria-flextesa-manager/*.mjs
+
+# Teztnets plugin
 /taqueria-plugin-teztnets/index.js
 /taqueria-plugin-teztnets/index.js.map
 /taqueria-plugin-teztnets/.parcel-cache
+
+# Contract Types Plugin
 /taqueria-plugin-contract-types/*.js
 /taqueria-plugin-contract-types/*.map
 /taqueria-plugin-contract-types/*.cjs
@@ -162,26 +174,36 @@ tests/coverage
 /taqueria-plugin-contract-types/**/*.map
 /taqueria-plugin-contract-types/**/*.cjs
 /taqueria-plugin-contract-types/**/*.d.ts
+
+# Archetype plugin
 /taqueria-plugin-archetype/index.js
 /taqueria-plugin-archetype/index.js.map
+
+# Tezos Client Plugin
 /taqueria-plugin-tezos-client/index.js
 /taqueria-plugin-tezos-client/index.js.map
+
+# Taqueria State Package
 /taqueria-state/index.js
 /taqueria-state/index.js.map
 /taqueria-state/*.d.ts
 /taqueria-state/node/*.d.ts
+
+# Toolkit
 /taqueria-toolkit/index.js
 /taqueria-toolkit/index.js.map
 /taqueria-toolkit/*.d.ts
+
+# Jest plugin
 /taqueria-plugin-jest/*.js
 /taqueria-plugin-jest/*.cjs
 /taqueria-plugin-jest/*.map
 /taqueria-plugin-jest/*.mjs
 /taqueria-plugin-jest/index.d.ts
+
+# IPFS plugin
 /taqueria-plugin-ipfs-pinata/index.js.map
 /taqueria-plugin-ipfs-pinata/index.js
-/taqueria-plugin-metadata/index.js.map
-/taqueria-plugin-metadata/index.js
 
 # VS Code Extension
 /taqueria-vscode-extension/out
@@ -189,10 +211,21 @@ tests/coverage
 .vscode-test
 /taqueria-vscode-extension/state.json
 /taqueria-vscode-extension/config.json
+
+# Metadata plugin
+/taqueria-plugin-metadata/index.js.map
+/taqueria-plugin-metadata/index.js
+
+# Website
 website/docs/glossary.md
 website/yarn.lock
-taqueria-plugin-metadata/index.js
-taqueria-plugin-metadata/index.js.map
+
+# Taqueria Protocol
+/taqueria-protocol/out
+/taqueria-protocol/*.mjs
+/taqueria-protocol/*.map
+/taqueria-protocol/*.d.ts
+/taqueria-protocol/*.js
 taqueria-protocol/**/*.js
 taqueria-protocol/**/*.map
 taqueria-protocol/**/*.d.ts
