--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	},
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
 	"devDependencies": {
+		"@gmrchk/cli-testing-library": "^0.1.2",
 		"chokidar-cli": "^3.0.0",
 		"dprint": "^0.27.1",
 		"eta": "^1.12.3",
