--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Install Deno
         uses: denoland/setup-deno@v1
         with:
-          deno-version: ${{ inputs.deno-version }}
+          deno-version: "${{ inputs.deno-version }}"
 
       - name: Attempt to rebuild
         run: npm rebuild | true
