--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -6,6 +6,9 @@ on:
       prerelease:
         required: false
         type: string
+      deno-version:
+        required: true
+        type: string
     secrets:
       GCP_PROJECT:
         required: true
@@ -52,7 +55,7 @@ jobs:
       - name: Install Deno
         uses: denoland/setup-deno@v1
         with:
-          deno-version: "1.23.4"
+          deno-version: "${{ inputs.deno-version }}"
 
       - name: Attempt to rebuild
         run: npm rebuild | true
