--- a/taqueria-flextesa-manager/package.json
+++ b/taqueria-flextesa-manager/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/flextesa-manager",
-	"version": "0.27.2-alpha",
+	"version": "0.25.12-rc",
 	"private": true,
 	"description": "Provides an interface and abstraction over a flextesa mininet",
 	"main": "index.js",
@@ -29,7 +29,7 @@
 		"typescript": "^4.7.2"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.27.2-alpha",
+		"@taqueria/node-sdk": "^0.25.12-rc",
 		"execa": "^6.1.0",
 		"promise-retry": "^2.0.1",
 		"yargs": "^17.5.1",
