--- a/taqueria-plugin-ligo/package.json
+++ b/taqueria-plugin-ligo/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-ligo",
-	"version": "0.27.2-alpha",
+	"version": "0.25.12-rc",
 	"description": "A taqueria plugin for compiling LIGO smart contracts",
 	"targets": {
 		"default": {
@@ -41,7 +41,7 @@
 	},
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.27.2-alpha",
+		"@taqueria/node-sdk": "^0.25.12-rc",
 		"fast-glob": "^3.2.11"
 	},
 	"devDependencies": {
