--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -7,7 +7,7 @@ on:
         required: false
         type: string
       deno-dir:
-        default: '~/.deno'
+        default: 'deno'
         type: string
       deno-version:
         required: true
