--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -19,12 +19,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PERSONAL_ACCESS_TOKEN : ${{ secrets.CLA_TOKEN }}
         with:
-          path-to-signatures: 'signatures/cla_signatures.json'
-          path-to-document: 'https://github.com/ecadlabs/ecadlabs-cla/blob/main/ECAD_Labs_CLA.md'
+          path-to-signatures: 'cla_signatures.json'
+          path-to-document: 'https://github.com/pinnacle-labs/contrib/blob/main/README.md'
           branch: 'main'
-          allowlist: 'hu3man,HamidGoudarzi1988,jevonearth,russellmorton,mweichert,GImbrailo,danielelisi,alexzbusko,mosesintech,Renesauve,sinapsist,ricklove,carte7000,neilmangan,AbineshECAD,AlirezaHaghshenas,BGMurphy,CalebBarnes,claudebarde,dsawali,e-asphyx,eddingston,Innkst,jchenche,michaelkernaghan,Renesauve,roxaneletourneau,hui-an-yang'
-          custom-notsigned-prcomment: 'Thank you for your contribution. Like many open-source projects, we require that contributors sign a [Contributor License Agreement](https://github.com/ecadlabs/ecadlabs-cla/blob/main/ECAD_Labs_CLA.md) (based on the Apache Foundation CLA). Please sign the Taqueria project CLA by posting a Pull Request comment of the text below:'
+          allowlist: 'mweichert'
+          custom-notsigned-prcomment: 'Thank you for your contribution. Like many open-source projects, we require that contributors sign a [Contributor License Agreement](https://github.com/pinnacle-labs/contrib/blob/main/README.md) (based on the Apache Foundation CLA). Please sign the Taqueria project CLA by posting a Pull Request comment of the text below:'
           custom-pr-sign-comment: 'I have read and agree to the CLA'
           # Use a remote repository to ensure that the main branch remains protected
-          remote-organization-name: ecadlabs
-          remote-repository-name: ecadlabs-cla
+          remote-organization-name: pinnacle-labs
+          remote-repository-name: contrib
