--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -88,24 +88,24 @@ jobs:
       - id: setArtifactFilename
         run: echo "::set-output name=filename::taqueria-vscode-${{ github.head_ref || github.ref_name }}-ubuntu-latest"
 
-      - name: Authenticate with GCP
-        id: gcp-auth
-        uses: google-github-actions/auth@v0
-        with:
-          workload_identity_provider: "projects/${{ secrets.GCP_PROJECT }}/locations/global/workloadIdentityPools/github-actions-storage-pool/providers/github-actions-oidc-provider"
-          service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
+      # - name: Authenticate with GCP
+      #   id: gcp-auth
+      #   uses: google-github-actions/auth@v0
+      #   with:
+      #     workload_identity_provider: "projects/${{ secrets.GCP_PROJECT }}/locations/global/workloadIdentityPools/github-actions-storage-pool/providers/github-actions-oidc-provider"
+      #     service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
 
-      - name: Upload binary to GCP
-        id: uploadFile
-        uses: 'google-github-actions/upload-cloud-storage@v0'
-        with:
-          path: ${{ steps.packageExtension.outputs.vsixPath }}
-          destination: "taqueria-artifacts/${{ github.ref }}/${{ github.sha }}/${{ steps.setArtifactFilename.outputs.filename }}"
+      # - name: Upload binary to GCP
+      #   id: uploadFile
+      #   uses: 'google-github-actions/upload-cloud-storage@v0'
+      #   with:
+      #     path: ${{ steps.packageExtension.outputs.vsixPath }}
+      #     destination: "taqueria-artifacts/${{ github.ref }}/${{ github.sha }}/${{ steps.setArtifactFilename.outputs.filename }}"
 
-      - name: Set package public url
-        id: publicUrl
-        run: |
-          echo "::set-output name=vsixGcsUrl::https://storage.googleapis.com/taqueria-artifacts/${{ steps.uploadFile.outputs.uploaded }}"
+      # - name: Set package public url
+      #   id: publicUrl
+      #   run: |
+      #     echo "::set-output name=vsixGcsUrl::https://storage.googleapis.com/taqueria-artifacts/${{ steps.uploadFile.outputs.uploaded }}"
 
   publish-marketplace:
     name: Publish VSCode Extension
