--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
 		"ts-jest": "^28.0.8",
 		"ts-node": "^10.9.1",
 		"ts-to-zod": "^1.13.1",
-		"tsup": "^6.7.0",
+		"tsup": "6.5.0",
 		"typescript": "^4.9.5",
 		"with-staged": "^1.0.2"
 	},
