--- a/taqueria-analytics/package.json
+++ b/taqueria-analytics/package.json
@@ -38,7 +38,7 @@
 		"node-machine-id-xz": "^1.0.2"
 	},
 	"devDependencies": {
-		"tsup": "^6.7.0",
+		"tsup": "6.5.0",
 		"typescript": "^4.9.5"
 	},
 	"tsup": {
