--- a/taqueria-plugin-archetype/package.json
+++ b/taqueria-plugin-archetype/package.json
@@ -45,7 +45,7 @@
 		"ts-pattern": "^4.3.0"
 	},
 	"devDependencies": {
-		"tsup": "^6.7.0",
+		"tsup": "6.5.0",
 		"typescript": "^4.9.5"
 	},
 	"tsup": {
