--- a/taqueria-plugin-core/package.json
+++ b/taqueria-plugin-core/package.json
@@ -39,7 +39,7 @@
 	},
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"devDependencies": {
-		"tsup": "^6.7.0",
+		"tsup": "6.5.0",
 		"typescript": "^4.9.5"
 	},
 	"dependencies": {
