--- a/taqueria-plugin-flextesa/package.json
+++ b/taqueria-plugin-flextesa/package.json
@@ -43,7 +43,7 @@
 	},
 	"devDependencies": {
 		"@types/async-retry": "^1.4.5",
-		"tsup": "^6.7.0",
+		"tsup": "6.5.0",
 		"typescript": "^4.9.5"
 	},
 	"tsup": {
