--- a/taqueria-plugin-ipfs-pinata/package.json
+++ b/taqueria-plugin-ipfs-pinata/package.json
@@ -41,7 +41,7 @@
 	},
 	"devDependencies": {
 		"@types/node-fetch": "^2.6.4",
-		"tsup": "^6.7.0",
+		"tsup": "6.5.0",
 		"typescript": "4.7.2"
 	},
 	"tsup": {
