--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -42,7 +42,7 @@
 	},
 	"devDependencies": {
 		"@types/async-retry": "^1.4.5",
-		"tsup": "^6.7.0",
+		"tsup": "6.5.0",
 		"typescript": "4.7.2"
 	},
 	"tsup": {
