--- a/taqueria-plugin-metadata/package.json
+++ b/taqueria-plugin-metadata/package.json
@@ -37,7 +37,7 @@
 	},
 	"devDependencies": {
 		"@types/prompts": "^2.4.4",
-		"tsup": "^6.7.0",
+		"tsup": "6.5.0",
 		"typescript": "4.7.2"
 	},
 	"tsup": {
