--- a/taqueria-plugin-smartpy/package.json
+++ b/taqueria-plugin-smartpy/package.json
@@ -55,7 +55,7 @@
 		"fast-glob": "^3.2.12"
 	},
 	"devDependencies": {
-		"tsup": "^6.7.0",
+		"tsup": "6.5.0",
 		"typescript": "^4.9.5"
 	},
 	"tsup": {
