--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -52,7 +52,7 @@
 		"@types/node": "^17.0.12",
 		"@types/project-name-generator": "^2.1.1",
 		"@types/yargs": "^17.0.24",
-		"tsup": "^6.7.0",
+		"tsup": "6.5.0",
 		"typescript": "^4.9.5"
 	},
 	"tsup": {
