--- a/taqueria-toolkit/package.json
+++ b/taqueria-toolkit/package.json
@@ -33,7 +33,7 @@
 		"@types/cross-spawn": "^6.0.2",
 		"@types/node": "^17.0.12",
 		"@types/yargs": "^17.0.24",
-		"tsup": "^6.7.0",
+		"tsup": "6.5.0",
 		"typescript": "^4.9.5"
 	},
 	"dependencies": {
