--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -212,6 +212,10 @@ jobs:
         run: brew install docker colima && colima start
         if: runner.os == 'macOS'
 
+      - name: Setup Colima (on macOS)
+        run: cp ./tests/colima.yaml ~/.colima/default/colima.yaml
+        if: runner.os == 'macOS'
+
       - name: Add working dir to PATH
         run: echo "$(pwd)" >> $GITHUB_PATH
 
