--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -599,6 +599,9 @@ jobs:
       - name: Set matrix for next job
         id: set-matrix
         run: echo "matrix={\"spec\":${{ steps.list.outputs.files }}}" >> "$GITHUB_OUTPUT"
+      - name: Debug matrix content
+        run: |
+          echo "Matrix content: ${{ steps.set-matrix.outputs.matrix }}"
 
   # Run integration tests
   run-integration-tests:
@@ -635,10 +638,6 @@ jobs:
           CWD=$(pwd)
           export PATH=$PATH:$CWD
           pnpm run test:integration -w tests ${{ matrix.spec }}
-
-      - name: Debug matrix content
-        run: "echo \"Matrix content: ${{ needs.list-integration-tests.outputs.matrix }}"
-
 
   # Run all unit tests
   run-unit-tests:
