--- a/deno.json
+++ b/deno.json
@@ -13,6 +13,7 @@
 		"machine-id": "https://deno.land/x/machine_id@v0.3.0/mod.ts",
 		"colors": "https://deno.land/std@0.213.0/fmt/colors.ts",
 		"case": "https://deno.land/x/case@2.1.1/mod.ts",
+		"clipboard": "https://raw.githubusercontent.com/mweichert/clipboard/refs/heads/master/mod.ts",
 		"cliffy": "https://deno.land/x/cliffy@v0.20.1/table/mod.ts",
 		"deno-yargs-types": "https://deno.land/x/yargs@v17.4.0-deno/deno-types.ts",
 		"deno-yargs": "https://deno.land/x/yargs@v17.4.0-deno/deno.ts",
