--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/root",
-	"version": "0.61.1",
+	"version": "0.61.2",
 	"description": "An easy to use opinionated tool for building, testing, and deploying Tezos software",
 	"main": "index.ts",
 	"directories": {
@@ -50,6 +50,7 @@
 		"husky": "^9.0.11",
 		"lerna": "^8.1.8",
 		"lint-staged": "^15.2.10",
+		"module-alias": "^2.2.3",
 		"patch-package": "^8.0.0",
 		"pnpm": "^9.12.1",
 		"ts-node": "^10.9.2",
