--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-jest",
-	"version": "0.61.1",
+	"version": "0.61.2",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -29,9 +29,9 @@
 	"dependencies": {
 		"@taqueria/node-sdk": "workspace:*",
 		"@taqueria/plugin-contract-types": "workspace:*",
-		"@taquito/signer": "^21.0.0-beta.0",
-		"@taquito/taquito": "^21.0.0-beta.0",
-		"@taquito/utils": "^21.0.0-beta.0",
+		"@taquito/signer": "^20.1.0",
+		"@taquito/taquito": "^20.1.0",
+		"@taquito/utils": "^20.1.0",
 		"@types/jest": "^29.5.11",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.2",
