--- a/taqueria-plugin-tezbox/package.json
+++ b/taqueria-plugin-tezbox/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-tezbox",
-	"version": "0.61.1",
+	"version": "0.61.2",
 	"description": "A plugin for Taqueria providing local sandbox capabilities built on TezBox",
 	"private": true,
 	"keywords": [
@@ -44,11 +44,13 @@
 		"bip39": "^3.1.0",
 		"fast-glob": "^3.3.2",
 		"hjson": "^3.2.2",
+		"http-proxy": "^1.18.1",
 		"portfinder": "^1.0.32",
 		"rambda": "^9.3.0"
 	},
 	"devDependencies": {
 		"@types/async-retry": "^1.4.8",
+		"@types/http-proxy": "^1.17.15",
 		"@types/node": "^22.7.4",
 		"tsup": "^8.3.0",
 		"typescript": "^5.6.2"
