--- a/taqueria-protocol/package.json
+++ b/taqueria-protocol/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/protocol",
-	"version": "0.61.1",
+	"version": "0.61.2",
 	"description": "A TypeScript package which contains types that are to be shared between @taqueria/node-sdk and @taqueria/taqueria.",
 	"main": "index.js",
 	"scripts": {
@@ -318,9 +318,9 @@
 	},
 	"dependencies": {
 		"@peculiar/webcrypto": "^1.4.5",
-		"@taquito/signer": "^21.0.0-beta.0",
-		"@taquito/taquito": "^21.0.0-beta.0",
-		"@taquito/utils": "^21.0.0-beta.0",
+		"@taquito/signer": "^20.1.0",
+		"@taquito/taquito": "^20.1.0",
+		"@taquito/utils": "^20.1.0",
 		"batching-toposort": "^1.2.0",
 		"esbuild": "^0.20.0",
 		"fluture": "^14.0.0",
