--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
       - uses: denoland/setup-deno@v2
         with:
-          deno-version: v2.x
+          deno-version: v2.1.4
 
       - name: Restore Deno Cache
         uses: actions/cache@v4
@@ -92,7 +92,7 @@ jobs:
 
       - uses: denoland/setup-deno@v2
         with:
-          deno-version: v2.x
+          deno-version: v2.1.4
 
       - name: Restore Deno Cache
         uses: actions/cache@v4
@@ -155,7 +155,7 @@ jobs:
 
       - uses: denoland/setup-deno@v2
         with:
-          deno-version: v2.x
+          deno-version: v2.1.4
 
       - name: Download work archive
         uses: actions/download-artifact@v4
@@ -646,7 +646,7 @@ jobs:
 
       - uses: denoland/setup-deno@v2
         with:
-          deno-version: v2.x
+          deno-version: v2.1.4
 
       - name: Download work archive
         uses: actions/download-artifact@v4
