--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/node-sdk",
-	"version": "0.68.1",
+	"version": "0.68.2",
 	"description": "A TypeScript SDK for NodeJS used for Taqueria plugin development.",
 	"main": "./index.js",
 	"source": "./index.ts",
@@ -38,9 +38,9 @@
 	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"dependencies": {
 		"@taqueria/protocol": "workspace:*",
-		"@taquito/signer": "21.0.4",
-		"@taquito/taquito": "21.0.4",
-		"@taquito/utils": "21.0.4",
+		"@taquito/signer": "22.0.0-beta.0",
+		"@taquito/taquito": "22.0.0-beta.0",
+		"@taquito/utils": "22.0.0-beta.0",
 		"bip39": "^3.1.0",
 		"fluture": "^14.0.0",
 		"i18next": "^23.15.1",
